[gd_scene load_steps=29 format=3 uid="uid://ki7rluhfrpxg"]

[ext_resource type="Texture2D" uid="uid://duwxclu86fc22" path="res://assets/tilemap.png" id="1_8se4k"]
[ext_resource type="PackedScene" uid="uid://jiogikes0nat" path="res://scenes/enemy_knight.tscn" id="1_bk2qc"]
[ext_resource type="Script" path="res://scripts/level1.gd" id="1_lf1i3"]
[ext_resource type="PackedScene" uid="uid://bpfh8pkm6cnrk" path="res://scenes/player_killzone.tscn" id="2_4cqw3"]
[ext_resource type="PackedScene" uid="uid://lk1xa7yck62t" path="res://scenes/menu.tscn" id="2_ee5fa"]
[ext_resource type="PackedScene" uid="uid://dp5k2og2bj4nt" path="res://scenes/player.tscn" id="2_gl0vk"]
[ext_resource type="Texture2D" uid="uid://c6hcb6w4osxka" path="res://assets/miscellaneous.png" id="2_i3u8a"]
[ext_resource type="PackedScene" uid="uid://bmnc0h3qkeh0o" path="res://scenes/enemy_killzone.tscn" id="3_8udj2"]
[ext_resource type="Script" path="res://scripts/charFollow.gd" id="3_ahldc"]
[ext_resource type="PackedScene" uid="uid://d1ju8emowcm8p" path="res://scenes/lever_action.tscn" id="3_luu48"]
[ext_resource type="PackedScene" uid="uid://ch2sbdnp77nnu" path="res://scenes/background.tscn" id="3_s2j6u"]

[sub_resource type="Curve2D" id="Curve2D_4f7mi"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 168.567, -36.9052, 0, 0, 0, 0, 170.562, 62.1735, 0, 0, 0, 0, -112.045, 62.8383, 0, 0, 0, 0, -114.373, -44.2197, 0, 0, 0, 0, -94.7565, -45.2171, 0, 0, 0, 0, -93.0941, 44.5522, 0, 0, 0, 0, 49.2069, 43.2223, 0, 0, 0, 0, 48.2094, -40.8949, 0, 0, 0, 0, 169.232, -40.8949)
}
point_count = 9

[sub_resource type="AtlasTexture" id="AtlasTexture_fyu1s"]
atlas = ExtResource("1_8se4k")
region = Rect2(32, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nyla"]
atlas = ExtResource("1_8se4k")
region = Rect2(112, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b487l"]
atlas = ExtResource("1_8se4k")
region = Rect2(128, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6brks"]
atlas = ExtResource("1_8se4k")
region = Rect2(144, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uyaqi"]
atlas = ExtResource("1_8se4k")
region = Rect2(160, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wj45"]
atlas = ExtResource("1_8se4k")
region = Rect2(176, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_cyoj7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fyu1s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nyla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b487l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6brks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uyaqi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wj45")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uoesh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e28i4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pcql2"]
size = Vector2(5, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldnfj"]
atlas = ExtResource("2_i3u8a")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8sjfn"]
atlas = ExtResource("2_i3u8a")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qt2qa"]
atlas = ExtResource("2_i3u8a")
region = Rect2(64, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_n7ix7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldnfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8sjfn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qt2qa")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wh3t6"]
size = Vector2(14, 10)

[sub_resource type="CircleShape2D" id="CircleShape2D_aut24"]
radius = 15.583

[node name="level1" type="Node2D"]
process_mode = 1
z_index = 1
y_sort_enabled = true
position = Vector2(0, -3)
scale = Vector2(1.00257, 1.00257)
script = ExtResource("1_lf1i3")

[node name="Menu" parent="." instance=ExtResource("2_ee5fa")]
scale = Vector2(-0.868046, -0.393281)

[node name="background" parent="." instance=ExtResource("3_s2j6u")]
position = Vector2(457.42, 300.635)
scale = Vector2(2.87154, 2.87154)
layer_0/tile_data = PackedInt32Array(393225, 131072, 4, 327689, 131072, 4, 131081, 131072, 4, 65545, 131072, 4, 9, 131072, 4, -65527, 131072, 4, -131063, 0, 7, -196599, 131072, 4, -262135, 65536, 3, -327671, 65536, 2, -393207, 65536, 1, 393224, 131072, 4, 327688, 131072, 4, 131080, 131072, 4, 65544, 131072, 5, 8, 131072, 4, -65528, 131072, 4, -131064, 131072, 4, -196600, 131072, 4, -262136, 65536, 1, -327672, 131072, 2, -393208, 131072, 2, 393223, 131072, 4, 327687, 131072, 4, 262151, 131072, 4, 196615, 131072, 4, 131079, 131072, 4, 65543, 131072, 4, 7, 131072, 4, -65529, 65536, 5, -131065, 131072, 4, -196601, 131072, 4, -262137, 65536, 1, -327673, 131072, 1, -393209, 131072, 3, 393222, 131072, 4, 327686, 131072, 4, 262150, 131072, 4, 196614, 131072, 4, 131078, 131072, 4, 65542, 131072, 4, 6, 131072, 4, -65530, 131072, 4, -131066, 131072, 4, -196602, 131072, 4, -262138, 65536, 1, -327674, 65536, 2, -393210, 131072, 1, 393221, 131072, 4, 327685, 131072, 4, 262149, 131072, 4, 196613, 131072, 4, 131077, 131072, 4, 65541, 0, 5, 5, 131072, 4, -65531, 131072, 4, -131067, 131072, 4, -196603, 131072, 4, -262139, 131072, 3, -327675, 65536, 2, -393211, 131072, 2, 393220, 65536, 4, 327684, 131072, 4, 262148, 196608, 4, 196612, 131072, 4, 131076, 131072, 4, 65540, 131072, 4, 4, 131072, 4, -65532, 131072, 4, -131068, 131072, 4, -196604, 131072, 4, -262140, 65536, 1, -327676, 65536, 2, -393212, 131072, 2, 393219, 196608, 4, 327683, 131072, 4, 262147, 131072, 4, 196611, 131072, 4, 131075, 131072, 4, 65539, 131072, 4, 3, 131072, 4, -65533, 131072, 4, -131069, 131072, 4, -196605, 196608, 7, -262141, 65536, 1, -327677, 65536, 3, -393213, 65536, 1, 393218, 196608, 7, 327682, 131072, 4, 262146, 131072, 4, 196610, 131072, 4, 131074, 0, 7, 65538, 0, 6, 2, 131072, 4, -65534, 131072, 4, -131070, 131072, 5, -196606, 131072, 4, -262142, 65536, 3, -327678, 131072, 3, -393214, 65536, 3, 393217, 131072, 4, 327681, 131072, 4, 262145, 0, 5, 196609, 131072, 4, 131073, 131072, 6, 65537, 131072, 4, 1, 131072, 4, -65535, 131072, 4, -131071, 131072, 4, -196607, 131072, 4, -262143, 65536, 3, -327679, 131072, 3, -393215, 131072, 3, 393216, 131072, 4, 327680, 131072, 7, 262144, 131072, 7, 196608, 131072, 4, 131072, 131072, 4, 65536, 131072, 4, 0, 65536, 4, -65536, 131072, 4, -131072, 131072, 4, -196608, 131072, 4, -262144, 65536, 3, -327680, 131072, 2, -393216, 65536, 2, 458751, 131072, 4, 393215, 131072, 4, 327679, 131072, 4, 262143, 0, 7, 196607, 0, 7, 131071, 131072, 4, 65535, 131072, 4, -1, 131072, 4, -65537, 131072, 4, -131073, 131072, 4, -196609, 65536, 3, -262145, 65536, 1, -327681, 131072, 1, 458750, 131072, 4, 393214, 131072, 4, 327678, 131072, 4, 262142, 65536, 7, 196606, 131072, 4, 131070, 196608, 4, 65534, 0, 6, -2, 196608, 5, -65538, 131072, 4, -131074, 65536, 5, -196610, 65536, 2, -262146, 65536, 1, -327682, 131072, 1, 458749, 131072, 4, 393213, 131072, 4, 327677, 131072, 4, 262141, 131072, 4, 196605, 131072, 4, 131069, 131072, 4, 65533, 131072, 4, -3, 131072, 4, -131075, 131072, 4, -196611, 65536, 3, -262147, 65536, 2, -327683, 131072, 2, 458748, 131072, 4, 393212, 131072, 4, 327676, 131072, 4, 262140, 65536, 5, 196604, 131072, 4, 131068, 131072, 4, 65532, 131072, 4, -4, 131072, 4, -65540, 131072, 4, -131076, 131072, 4, -196612, 65536, 1, -262148, 131072, 3, -327684, 131072, 2, 458747, 131072, 4, 393211, 131072, 4, 327675, 65536, 5, 262139, 131072, 4, 196603, 131072, 4, 131067, 131072, 4, 65531, 131072, 4, -5, 65536, 5, -65541, 131072, 4, -131077, 65536, 4, -196613, 131072, 1, -262149, 131072, 1, -327685, 131072, 1, 458746, 0, 6, 393210, 131072, 4, 327674, 196608, 5, 262138, 131072, 4, 196602, 131072, 4, 131066, 131072, 4, 65530, 196608, 7, -6, 131072, 4, -65542, 131072, 4, -131078, 131072, 4, -196614, 65536, 2, -262150, 131072, 2, -327686, 131072, 1, 458745, 131072, 4, 393209, 131072, 4, 327673, 131072, 4, 262137, 131072, 4, 196601, 131072, 4, 131065, 65536, 4, 65529, 131072, 4, -7, 131072, 4, -65543, 131072, 4, -131079, 131072, 4, -196615, 65536, 3, -262151, 65536, 1, -327687, 131072, 3, 458744, 131072, 4, 393208, 131072, 4, 327672, 131072, 4, 262136, 131072, 6, 196600, 131072, 4, 131064, 131072, 4, 65528, 131072, 4, -8, 196608, 4, -65544, 131072, 4, -131080, 131072, 4, -196616, 131072, 2, -262152, 131072, 2, -327688, 65536, 2, 458743, 0, 7, 393207, 65536, 4, 327671, 65536, 7, 262135, 131072, 4, 196599, 131072, 4, 131063, 131072, 4, 65527, 131072, 4, -9, 131072, 4, -65545, 131072, 4, -131081, 131072, 4, -196617, 131072, 2, -262153, 65536, 3, -327689, 65536, 2, 458742, 131072, 4, 393206, 65536, 6, 327670, 393216, 8, 262134, 393216, 8, 196598, 131072, 4, 131062, 131072, 4, 65526, 131072, 4, -10, 196608, 6, -65546, 131072, 4, -131082, 131072, 4, -196618, 0, 1, -262154, 65536, 2, -327690, 131072, 2, 196616, 131072, 4, 262152, 131072, 4, 262153, 131072, 4, 196617, 131072, 4, -393226, 0, 0, -393225, 65536, 0, -393224, 131072, 0, -393223, 196608, 0, -393222, 65536, 0, -393221, 131072, 0, -393220, 196608, 0, -393218, 131072, 0, -393217, 196608, 0, -458752, 196608, 0, -393219, 65536, 0, -458751, 65536, 0, -458750, 131072, 0, -458749, 65536, 0, -458748, 65536, 0, -458747, 131072, 0, -458746, 65536, 0, -458745, 131072, 0, -458744, 262144, 0, -458743, 65536, 0, -458742, 131072, 0, -393206, 131072, 1, -327670, 131072, 2, -262134, 131072, 3, -458741, 65536, 0, -393205, 65536, 1, -327669, 65536, 2, -262133, 65536, 3, -458740, 131072, 0, -393204, 131072, 1, -327668, 131072, 2, -262132, 131072, 3, -458739, 65536, 0, -393203, 65536, 1, -327667, 65536, 2, -262131, 65536, 3, -458738, 196608, 0, -393202, 196608, 1, -327666, 196608, 2, -262130, 196608, 3, 393230, 131072, 4, 327694, 131072, 4, 262158, 131072, 4, 196622, 131072, 4, 131086, 131072, 4, 65550, 131072, 4, -65522, 131072, 4, -131058, 131072, 4, -196594, 196608, 5, 393229, 131072, 4, 327693, 65536, 7, 262157, 0, 5, 196621, 131072, 4, 131085, 131072, 4, 65549, 131072, 4, 13, 196608, 6, -65523, 196608, 7, -131059, 131072, 4, -196595, 131072, 4, 393228, 131072, 4, 327692, 131072, 7, 262156, 131072, 4, 196620, 131072, 4, 131084, 131072, 4, 65548, 131072, 4, 12, 131072, 4, -65524, 131072, 4, -131060, 131072, 4, -196596, 131072, 4, 393227, 131072, 4, 327691, 131072, 4, 262155, 131072, 4, 196619, 0, 7, 131083, 131072, 4, 65547, 131072, 4, 11, 131072, 5, -65525, 131072, 4, -131061, 131072, 4, -196597, 131072, 4, 393226, 131072, 4, 327690, 131072, 4, 262154, 131072, 4, 196618, 131072, 4, 131082, 131072, 4, 65546, 131072, 4, 10, 196608, 7, -65526, 131072, 4, -131062, 131072, 4, -196598, 131072, 7, -65539, 131072, 4, 14, 393216, 8)
layer_1/tile_data = PackedInt32Array(-327690, 393216, 3, -262154, 393216, 2, -196618, 393216, 2, -131082, 393216, 3, -65546, 393216, 2, -10, 393216, 7, 65526, 393216, 7, 131062, 393216, 6, 196598, 393216, 6, 458742, 0, 8, 524278, 0, 9, 393206, 393216, 3, 327673, 393216, 3, 393209, 393216, 2, 131065, 393216, 2, 196601, 393216, 3, 262137, 393216, 2, -7, 393216, 1, 65529, 393216, 2, -327683, 393216, 2, -262147, 393216, 4, -65533, 327680, 3, 3, 327680, 8, 65539, 196608, 2, -196611, 393216, 5, -131069, 327680, 3, -393213, 327680, 1, -327677, 327680, 2, -262141, 327680, 3, -196605, 327680, 2, 65534, 0, 8, 131070, 0, 2, 65535, 65536, 8, 131071, 131072, 2, 0, 131072, 8, 65536, 0, 2, 1, 196608, 8, 65537, 65536, 2, 2, 262144, 8, 65538, 131072, 2, -131075, 393216, 6, -458738, 327680, 0, -393202, 327680, 1, -327666, 327680, 2, -262130, 327680, 3, -196594, 327680, 4, -131058, 327680, 5, -65522, 327680, 6, 65550, 327680, 1, 131086, 327680, 2, 196622, 327680, 2, 262158, 327680, 2, 327694, 327680, 2, 393230, 327680, 8, 458766, 327680, 9)
layer_2/z_index = 3
layer_2/tile_data = PackedInt32Array(458744, 131072, 8, 524280, 131072, 9, 458745, 196608, 8, 524281, 196608, 9, 458746, 262144, 8, 524282, 262144, 9, 458747, 262144, 8, 524283, 262144, 9, 458748, 65536, 8, 524284, 65536, 9, 458749, 131072, 8, 524285, 131072, 9, 458750, 196608, 8, 524286, 196608, 9, 458751, 262144, 8, 524287, 262144, 9, 393216, 65536, 8, 458752, 65536, 9, 393217, 131072, 8, 458753, 131072, 9, 393218, 196608, 8, 458754, 196608, 9, 393219, 262144, 8, 458755, 262144, 9, 393220, 65536, 8, 458756, 65536, 9, 393221, 65536, 8, 458757, 65536, 9, 393222, 131072, 8, 458758, 131072, 9, 393223, 196608, 8, 458759, 196608, 9, 393224, 262144, 8, 458760, 262144, 9, 458743, 65536, 8, 524279, 65536, 9, 393225, 65536, 8, 458761, 65536, 9, 393226, 65536, 8, 458762, 65536, 9, 393227, 131072, 8, 458763, 131072, 9, 393228, 196608, 8, 458764, 196608, 9, 393229, 262144, 8, 458765, 262144, 9)
layer_3/tile_data = PackedInt32Array(-65539, 393216, 7, 196606, 0, 3, 196607, 65536, 3, 131072, 131072, 3, 131073, 65536, 3, 131074, 131072, 3, 131075, 196608, 3)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(573.171, 323.522)
scale = Vector2(0.402097, 0.402097)

[node name="player" parent="." instance=ExtResource("2_gl0vk")]
unique_name_in_owner = true
position = Vector2(75.4033, 484.163)

[node name="path1" type="Path2D" parent="."]
position = Vector2(554.171, 344.522)
scale = Vector2(3, 3)
curve = SubResource("Curve2D_4f7mi")

[node name="PathFollow2D" type="PathFollow2D" parent="path1"]
position = Vector2(143.893, -40.8949)
rotation = -0.117109
progress = 920.419
rotates = false
script = ExtResource("3_ahldc")

[node name="enemyKnight" parent="path1/PathFollow2D" instance=ExtResource("1_bk2qc")]
position = Vector2(1.55389, -1.82582)
rotation = 0.117109
scale = Vector2(1, 1)

[node name="lever1" type="RigidBody2D" parent="."]
z_index = 1
y_sort_enabled = true
position = Vector2(168.163, 396.389)
collision_mask = 2
mass = 10.0
gravity_scale = 0.0

[node name="pit_trap" type="Area2D" parent="lever1"]
position = Vector2(78, 7)
scale = Vector2(4.07926, 4.07926)

[node name="pit_sprite" type="AnimatedSprite2D" parent="lever1/pit_trap"]
unique_name_in_owner = true
position = Vector2(199.65, -17.1894)
sprite_frames = SubResource("SpriteFrames_cyoj7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="lever1/pit_trap"]
position = Vector2(199.65, -17.1894)
shape = SubResource("RectangleShape2D_uoesh")

[node name="player_killzone" parent="lever1/pit_trap" instance=ExtResource("2_4cqw3")]
position = Vector2(199.65, -17.1894)

[node name="player_collision" type="CollisionShape2D" parent="lever1/pit_trap/player_killzone"]
unique_name_in_owner = true
shape = SubResource("RectangleShape2D_e28i4")

[node name="enemy_killzone" parent="lever1/pit_trap" instance=ExtResource("3_8udj2")]
position = Vector2(199.65, -17.1894)

[node name="enemy_collision" type="CollisionShape2D" parent="lever1/pit_trap/enemy_killzone"]
unique_name_in_owner = true
position = Vector2(8.87721, 0)
shape = SubResource("RectangleShape2D_pcql2")

[node name="lever_sprite" type="AnimatedSprite2D" parent="lever1"]
unique_name_in_owner = true
z_index = 4
y_sort_enabled = true
position = Vector2(316.311, -165.451)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_n7ix7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="lever1"]
position = Vector2(316.31, -153.451)
scale = Vector2(3.08, 3.08)
shape = SubResource("RectangleShape2D_wh3t6")

[node name="lever_action1" parent="lever1" instance=ExtResource("3_luu48")]
position = Vector2(314.311, -161.451)
scale = Vector2(3.15061, 2.63061)

[node name="Button" type="Button" parent="lever1/lever_action1"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
offset_left = -13.3292
offset_top = -11.4042
offset_right = -5.32912
offset_bottom = -3.4042
scale = Vector2(3.39394, 3.0829)
toggle_mode = true
action_mode = 0
button_mask = 0
flat = true
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="lever1/lever_action1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="lever1/lever_action1"]
position = Vector2(0, 1)
scale = Vector2(1, 1.33367)
shape = SubResource("CircleShape2D_aut24")

[connection signal="toggle_lever" from="." to="lever1/lever_action1" method="_on_level_1_toggle_lever"]
[connection signal="body_entered" from="lever1/lever_action1" to="." method="_on_lever_action_1_body_entered"]
[connection signal="body_exited" from="lever1/lever_action1" to="." method="_on_lever_action_1_body_exited"]
[connection signal="pressed" from="lever1/lever_action1/Button" to="lever1/lever_action1" method="_on_button_pressed"]
[connection signal="toggled" from="lever1/lever_action1/Button" to="lever1/lever_action1" method="_on_button_toggled"]
